[package]
edition = "2021"
name    = "rust-tdeck-experiments"
version = "0.1.0"

[[bin]]
name = "rust-tdeck-experiments"
path = "./src/bin/hello.rs"

[dependencies]
embedded-io = { version = "0.6.1" , default-features = false}
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
esp-alloc = "0.8.0"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable","log-04"] }
mipidsi = "0.9.0"
esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.15.0", features = ["esp32s3", "wifi", "smoltcp"]}
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = ['medium-ethernet','socket-raw']}
embedded-sdmmc = {  version = "0.9.0", features = ["log"] }
gt911 = "0.3.0"
esp-hal-embassy = {  version = "0.9.0", features = ["esp32s3"] }
embassy-executor = {  version = "0.7.0", features = ["log", "task-arena-size-65536"] }
micromath = "2.1.0"
esp-storage = {  version="0.7.0", features = ["esp32s3"] }
embedded-storage = "0.3.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
