[package]
edition = "2021"
name    = "rust-tdeck-experiments"
version = "0.1.0"

[[bin]]
name = "rust-tdeck-experiments"
path = "./src/bin/hello.rs"

[dependencies]
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "esp32s3", "println"] }
esp-bootloader-esp-idf = {  version = "0.3.0" , features = ["esp32s3"]}
esp-hal = { version = "1.0.0-rc.1", features = ["esp32s3", "unstable","log-04"] }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
esp-rtos = { version = "0.1.0", features = ["esp32s3","esp-radio","embassy","log-04"] }
esp-radio = { version = "0.16.0",features = ["esp32s3", "wifi","wifi-eap","unstable","smoltcp","log-04"] }
esp-storage = {  version="0.8.0", features = ["esp32s3"] }

embassy-executor = {  version = "0.9.0", features = ["log"] }
embassy-net = {  version = "0.7.0" , features = ["udp", "dns","dhcpv4", "medium-ethernet", "tcp"]}
embassy-time = "0.5.0"

embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-io-async = { version = "0.6.1"}
embedded-sdmmc = {  version = "0.9.0", features = ["log"] }
embedded-storage = "0.3.1"

blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
mipidsi = "0.9.0"
log = { version = "0.4.17" }
gt911 = "0.3.0"
micromath = "2.1.0"
byteorder = {  version = "1.5.0", default-features = false }
heapless = "0.8.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
nanomp3 = {  version="0.1.1" }
#sntpc = { version = "0.6.0" ,  default-features = false, features = [
#    "embassy-socket",
#]}
jiff = { version = "0.2.10", default-features = false, features = ["static"] }

edge-dhcp = "0.6.0"
edge-nal = "0.5.0"
edge-nal-embassy = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
